fixing picture sizing on small screen;

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
 }
 
 #profile-pic {
-  width: 90%;
+  width: 100%;
 }
 
 .profile-pic {
@@ -62,10 +62,10 @@
 }
 
 @media only screen and (max-width: 550px) {
-  #profile-pic {
-    /* margin-top: 120px; */
-    display: none;
+  .about-me {
+    flex-direction: column;
   }
+
   .david-rada {
     margin-left: -100px !important;
   }
@@ -74,5 +74,10 @@
 @media only screen and (max-width: 380px) {
   .david-rada {
     margin-left: -75px !important;
+  } 
+   #profile-pic {
+    width: 50%;
+    margin-left: 29%;
+    margin-top: -5px;
   }
 }
